deployment/k8s/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homestarter
  namespace: homestarter-ns
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,X-User-Id,X-User-Name,X-User-Email
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PUT, DELETE, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://172.30.1.5:30080,http://121.129.45.98:8080,http://localhost:3000,http://homestarter.172.30.1.205.nip.io"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: homestarter-api.172.30.1.205.nip.io
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/v1/assets
            pathType: Prefix
            backend:
              service:
                name: asset-service
                port:
                  number: 80
          - path: /housings
            pathType: Prefix
            backend:
              service:
                name: housing-service
                port:
                  number: 80
          - path: /api/v1/loans
            pathType: Prefix
            backend:
              service:
                name: loan-service
                port:
                  number: 80
          - path: /api/v1/admin/loans
            pathType: Prefix
            backend:
              service:
                name: loan-service
                port:
                  number: 80
          - path: /calculator
            pathType: Prefix
            backend:
              service:
                name: calculator-service
                port:
                  number: 80
          - path: /roadmaps
            pathType: Prefix
            backend:
              service:
                name: roadmap-service
                port:
                  number: 80
          - path: /lifecycle-events
            pathType: Prefix
            backend:
              service:
                name: roadmap-service
                port:
                  number: 80
